--- a/bridges.html
+++ b/bridges.html
@@ -13,7 +13,7 @@
 				<header id="header">
 			<div class="logo container">
 						<div>
-							<h1><a href="index.html" id="logo">The Bridges of AVAX</a></h1>
+							<h1><a href="https://launch.bridgesofavax.com" id="logo">The Bridges of AVAX</a></h1>
 						</div>
 					</div>
 				</header>
@@ -21,7 +21,7 @@
 			<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li class="current"><a href="index.html">Home</a></li>
+						<li class="current"><a href="https://launch.bridgesofavax.com">Home</a></li>
 						<li><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c">Market</a></li>
 						<li>
 							<a href="#">Community</a>
