--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
 
-			<!-- Header -->
-			<!--	<header id="header">
+			<!-- Header -->	
+				<header id="header">
 			<div class="logo container">
 						<div>
-							<h1><a href="index.html" id="logo">The Bridges of AVAX</a></h1>
+							<h1><a href="https://launch.bridgesofavax.com" id="logo">The Bridges of AVAX</a></h1>
 						</div>
 					</div>
-				</header>-->
+				</header>
 
 			<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li class="current"><a href="index.html">Home</a></li>
+						<li class="current"><a href="https://launch.bridgesofavax.com">Home</a></li>
 						<li><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c">Market</a></li>
 						<li>
 							<a href="#">Community</a>
@@ -54,18 +54,17 @@
 								<!-- Highlight -->
 									<section class="box highlight">
 										<ul class="special">
-											<li><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c/17" ><img src="images/BoA-0004.png" alt="" style="width:250px;height:300px;"/></a></li>
-											<li><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c/115" ><img src="images/BoA-0201.png" alt="" style="width:250px;height:300px;"/></a></li>
-											<li><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c/137" ><img src="images/BoA-0002.png" alt="" style="width:250px;height:300px;"/></a></li>
-											<li><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c" ><img src="images/Demo-collage-gif.gif" alt="" style="width:250px;height:300px;"/></a></li>
+											<li><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c/17" ><img src="images/BoA-0004.png" alt="" style="width:200px;height:250px;"/></a></li>
+											<li><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c/115" ><img src="images/BoA-0201.png" alt="" style="width:200px;height:250px;"/></a></li>
+											<li><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c/137" ><img src="images/BoA-0002.png" alt="" style="width:200px;height:250px;"/></a></li>
+											<li><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c" ><img src="images/Demo-collage-gif.gif" alt="" style="width:200px;height:250px;"/></a></li>
 										</ul>
 										<header>
 											<h2>About the Bridges of AVAX</h2>
 											<p>Ready to be collected and traded</p>
 										</header>
 										<p>
-											The Bridges of AVAX is a collection of 901 NFT bridges on the Avalanche (AVAX) network. Bridges of AVAX varies with different tiers, traits and comes with a uniqute quote or interesting facts about them. 
-											Bridge levels are determined by economic capacity, popularity and how widely they're used. (Will be useful at the next phase.) 
+											The Bridges of AVAX is a collection of 901 NFT bridges on the Avalanche (AVAX) network. Bridges of AVAX varies with different tiers, traits and comes with a unique quote or interesting facts about them. Bridge levels are determined by economic capacity, tolling power, popularity and how widely they’re used. (Will be useful at the next phase.)
 											
 										</p>
 									</section>
@@ -82,10 +81,22 @@
 
 													<!-- Feature -->
 														<section class="box feature">
+															<img src="images/golden-gate-bridge.jpg" alt="" style="width:250px;height:200px;"/>
+															<h3>Free Launch</h3>
+															<p>
+																Unlike other NFT projects that charge an arm and a leg to mint. The team behind Bridges of AVAX decided to airdrop most of the GENESIS bridges to lucky qualifying NFT collectors. Some were dropped to qualifying GB HODLers during prelaunch while others are set apart for the general launch drop and social media giveaways. 
+															</p>
+														</section>
+
+												</div>
+												<div class="col-3 col-6-medium col-12-small">
+
+													<!-- Feature -->
+														<section class="box feature">
 															<img src="images/supply.png" alt="" style="width:250px;height:200px;"/>
 															<h3>Limited Supply</h3>
 															<p>
-																Only 901 bridges will ever be minted. Bridges are minted in multiple phases and distributed to the AVAX community. The first batch is known as GENESIS bridges.
+																Only 901 bridges will ever be minted. Bridges are minted in multiple phases and distributed to the AVAX community. The first batch is known as GENESIS bridges which are dropped to qualifying GB holders and members of the community. The price of the bridges will be determined by the community.  
 															</p>
 														</section>
 
@@ -97,18 +108,7 @@
 															<img src="images/bridgeonomics.png" alt="" style="width:250px;height:200px;"/>
 															<h3>Different Levels of Rarity</h3>
 															<p>
-																Not all bridges are the same, there are 5 levels of rarity of bridges: Common, Uncommon, Rare, Ultra Rare and Legendary. Each level with an exponentially decreasing supply count.															</p>
-														</section>
-
-												</div>
-												<div class="col-3 col-6-medium col-12-small">
-
-													<!-- Feature -->
-														<section class="box feature">
-															<img src="images/golden-gate-bridge.jpg" alt="" style="width:250px;height:200px;"/>
-															<h3>Free Launch</h3>
-															<p>
-																Unlike other NFT projects that charge an arm and a leg to mint. The team behind Bridges of AVAX decided to airdrop most of the GENESIS bridges to lucky NFT collectors. 
+																Not all bridges are the same, there are 5 levels of rarity of bridges: Common, Uncommon, Rare, Ultra Rare and Legendary. Each increasing level will have an exponentially decreasing supply count. Bridges will eventually be allowed to be traded in for an upgrade on a 5 to 1 ratio.
 															</p>
 														</section>
 
@@ -120,7 +120,7 @@
 															<img src="images/Nishi-Seto.jpg" alt="" style="width:250px;height:200px;"/>
 															<h3>Future Functions</h3>
 															<p>
-																All NFT bridges have traits which affects their tolling power and economic activity, a figure that will be used extensively in the next phase of development (blockchain game). 
+																Bridges of AVAX started off with the love for bridges from which a community was established. As you may be aware, the NFT bridges are minted with traits which affect their tolling power and economic activity, a figure that will be used extensively in the next phase of development. 
 															</p>
 														</section>
 
@@ -134,7 +134,6 @@
 											</div>
 										</div>
 									</section>
-
 							</div>
 						</div>
 					</div>
@@ -152,11 +151,16 @@
 										<h3>Prelaunch</h3>
 										<p>Bridges of AVAX is a proud Good Bridging community member and has dedicated the initial NFT drop to GB HODLers with 500+ GB tokens</p>
 										<h3>Launch</h3>
-										<p>Bridges of AVAX will be giving away NFT bridges to whitelisted AVAX users. Anyone with an AVAX address can particiate and you can incrase your chances of winning by REFERRING others to the whitelist.</p> 
+										<p>
+											Bridges of AVAX will be giving away NFT bridges to whitelisted AVAX users in the general drop (Gen 2 bridges). Anyone with an AVAX address can participate by signing up for the whitelist and you can increase your chances of winning by REFERRING others to the whitelist.
+										</p> 
 										<h3>50% Minted</h3>
-										<p>More giveaway of bridges throguh social media, partnerships and collabs with influencers and YouTubers.</p>
+										<p>
+											Tokenomics for next phase announced with more giveaway of bridges through social media, partnerships and collabs with influencers and YouTubers. Full plans for the Bridge Game will be released where we seek to gamify the face of defi. Existing bridge holders may receive free airdrops from partner projects.
+										</p>
 										<h3>100% Minted</h3>
-											<p>The Bridges of AVAX team plans to build bridges with other AVAX NFT projects to collectively grow the AVAX ecosystem. 
+											<p>
+												After all store bridges are minted and sold, the team plans to invest the store proceeds into building up the Bridges of AVAX ecosystem. Some ideas on the drawing board include putting the proceeds into defi/yield farming and distributing bridge owners the profit as tolling revenue as well as opening up a NFT accelerator to invest in and support newer projects which may or may not result in airdrops of newer NFTs. 
 										</p>
 									</section>
 
