--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Bridges of AVAX | A Bridge NFT Collection on the AVAX Avalanche Network</title>
+		<title>Islands of AVAX | A Collection of NFT islands with an Economic Simulation only on the AVAX Avalanche Network</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -13,7 +13,7 @@
 				<header id="header">
 			<div class="logo container">
 						<div>
-							<h1><a href="https://launch.bridgesofavax.com" id="logo">The Bridges of AVAX</a></h1>
+							<h1><a href="index.html" id="logo">The Islands of AVAX</a></h1>
 						</div>
 					</div>
 				</header>
@@ -21,27 +21,27 @@
 			<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li class="current"><a href="https://launch.bridgesofavax.com">Home</a></li>
+						<li class="current"><a href="index.html">Home</a></li>
 						<li><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c">Market</a></li>
 						<li>
 							<a href="#">Community</a>
 							<ul>
-								<li><a href="https://twitter.com/bridgesofavax">Twitter</a></li>
-								<li><a href="https://t.me/bridgesofavax">Telegram</a></li>
-								<li><a href="https://bridgesofavax.medium.com">Medium</a></li>
+								<li><a href="https://twitter.com/islandsofavax">Twitter</a></li>
+								<li><a href="https://t.me/islandssofavax">Telegram</a></li>
+								<li><a href="https://islandsofavax.medium.com">Medium</a></li>
 							</ul>
 						</li>
 					</ul>
 				</nav>
 
 			<!-- Banner -->
-				<section id="banner">
+				<section id="banner2">
 					<div class="content">
-						<h2>The Bridges of AVAX</h2>
-						<p>A rare collection of 901 NFT Bridges featuring bridges from all over the world.</p>
-						<p>Powered by the Avalanche (AVAX) Blockchain.
-						</p>
-						<a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c" class="button scrolly">See Collection</a>
+						<h2>The Islands of AVAX</h2>
+						<p>An original NFT collection of 2000 NFT islands.</p>
+						<p>Powered by the Avalanche (AVAX) Blockchain and sold exclusive on</p>
+						<p><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c" ><img src="images/nftrade-logo.png" alt="" style="width:200px;height:30px;"/></a></p>						
+						<a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c" class="button scrolly" >See Collection</a>
 					</div>
 				</section>
 
@@ -54,18 +54,23 @@
 								<!-- Highlight -->
 									<section class="box highlight">
 										<ul class="special">
-											<li><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c/17" ><img src="images/BoA-0004.png" alt="" style="width:200px;height:250px;"/></a></li>
-											<li><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c/115" ><img src="images/BoA-0201.png" alt="" style="width:200px;height:250px;"/></a></li>
-											<li><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c/137" ><img src="images/BoA-0002.png" alt="" style="width:200px;height:250px;"/></a></li>
-											<li><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c" ><img src="images/Demo-collage-gif.gif" alt="" style="width:200px;height:250px;"/></a></li>
+											<li><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c/17" ><img src="images/small-desert-island.png" alt="" style="width:200px;height:200px;"/></a></li>
+											<li><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c/115" ><img src="images/small-mountain-island.png" alt="" style="width:200px;height:200px;"/></a></li>
+											<li><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c/137" ><img src="images/medium-lumber-island.png" alt="" style="width:200px;height:200px;"/></a></li>
+											<li><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c" ><img src="images/Islands-of-Avax-Demo.gif" alt="" style="width:200px;height:200px;"/></a></li>
 										</ul>
+										<ul>
+											<li class="button alt scrolly">Avalanche C-Chain</li>
+											<li class="button scrolly">2000 NFTs in collection</li>
+											<li class="button alt scrolly">Presale price 1 AVAX per NFT</li>
+										</ul>	
 										<header>
-											<h2>About the Bridges of AVAX</h2>
+											<h2>About the Islands of AVAX</h2>
 											<p>Ready to be collected and traded</p>
 										</header>
 										<p>
-											The Bridges of AVAX is a collection of 901 NFT bridges on the Avalanche (AVAX) network. Bridges of AVAX varies with different tiers, traits and comes with a unique quote or interesting facts about them. Bridge levels are determined by economic capacity, tolling power, popularity and how widely they’re used. (Will be useful at the next phase.)
-											
+											The Islands of AVAX is an archipelago of islands rich full of untapped resources and  developmental opportunites. Island cities are eager for food and resources and there are research rich islands waiting to be collected.
+											Will you preserve their natural beauty or will you build industries to meet the growing needs of the island cities?
 										</p>
 									</section>
 
@@ -74,17 +79,17 @@
 
 								<!-- Features -->
 									<section class="box features">
-										<h2 class="major"><span>Bridgeonomics</span></h2>
+										<h2 class="major"><span>Islandnomics</span></h2>
 										<div>
 											<div class="row">
 												<div class="col-3 col-6-medium col-12-small">
 
 													<!-- Feature -->
 														<section class="box feature">
-															<img src="images/golden-gate-bridge.jpg" alt="" style="width:250px;height:200px;"/>
-															<h3>Free Launch</h3>
+															<img src="images/Islands-of-Avax-Demo.gif" alt="" style="width:200px;height:200px;"/>
+															<h3>Unique Islands</h3>
 															<p>
-																Unlike other NFT projects that charge an arm and a leg to mint. The team behind Bridges of AVAX decided to airdrop most of the GENESIS bridges to lucky qualifying NFT collectors. Some were dropped to qualifying GB HODLers during prelaunch while others are set apart for the general launch drop and social media giveaways. 
+																Each island is unique and has its own island number, resource type, resource output and location. 
 															</p>
 														</section>
 
@@ -93,10 +98,10 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<img src="images/supply.png" alt="" style="width:250px;height:200px;"/>
-															<h3>Limited Supply</h3>
+															<img src="images/medium-lumber-island.png" alt="" style="width:200px;height:200px;"/>
+															<h3>Rarity</h3>
 															<p>
-																Only 901 bridges will ever be minted. Bridges are minted in multiple phases and distributed to the AVAX community. The first batch is known as GENESIS bridges which are dropped to qualifying GB holders and members of the community. The price of the bridges will be determined by the community.  
+																Certain islands are more rare due to the resources, size, characteristics which may yield different levels of economic potential in future stages of the game.
 															</p>
 														</section>
 
@@ -106,9 +111,9 @@
 													<!-- Feature -->
 														<section class="box feature">
 															<img src="images/bridgeonomics.png" alt="" style="width:250px;height:200px;"/>
-															<h3>Different Levels of Rarity</h3>
+															<h3>Develop and power up</h3>
 															<p>
-																Not all bridges are the same, there are 5 levels of rarity of bridges: Common, Uncommon, Rare, Ultra Rare and Legendary. Each increasing level will have an exponentially decreasing supply count. Bridges will eventually be allowed to be traded in for an upgrade on a 5 to 1 ratio.
+																While islands initially are undeveloped, players may opt to erect resource extraction facilities on their island based on the island type. (eg. Forest island = Lumber Mill, Mountain island = Mine)
 															</p>
 														</section>
 
@@ -118,9 +123,9 @@
 													<!-- Feature -->
 														<section class="box feature">
 															<img src="images/Nishi-Seto.jpg" alt="" style="width:250px;height:200px;"/>
-															<h3>Future Functions</h3>
+															<h3>Project DAO (Proposed)</h3>
 															<p>
-																Bridges of AVAX started off with the love for bridges from which a community was established. As you may be aware, the NFT bridges are minted with traits which affect their tolling power and economic activity, a figure that will be used extensively in the next phase of development. 
+																A portion of the sale proceeds will go towards a perpetual fund. Monthly revenue from the perpetual will go towards the simluation of the economic activity (Eg. Token Airdrops & other NFT airdrops) 
 															</p>
 														</section>
 
@@ -149,18 +154,20 @@
 									<section>
 										<h2 class="major"><span>Roadmap</span></h2>
 										<h3>Prelaunch</h3>
-										<p>Bridges of AVAX is a proud Good Bridging community member and has dedicated the initial NFT drop to GB HODLers with 500+ GB tokens</p>
+										<p>
+											Islands of AVAX will be launching with a number of prize giveaways on social media. Be sure to follow us on <a href="https://twitter.com/islandsofavax">Twitter</a> and  <a href="https://t.me/islandsofavax">Telegram</a> to not miss out. 
+										</p>
 										<h3>Launch</h3>
 										<p>
-											Bridges of AVAX will be giving away NFT bridges to whitelisted AVAX users in the general drop (Gen 2 bridges). Anyone with an AVAX address can participate by signing up for the whitelist and you can increase your chances of winning by REFERRING others to the whitelist.
+											We will be launching on NFTrade.com. Islands will be minted and released in batches, priced from 1 AVAX each and are claimed on a first come first serve basis. 
 										</p> 
-										<h3>50% Minted</h3>
+										<h3>Economic Simulator (Proposed)</h3>
 										<p>
-											Tokenomics for next phase announced with more giveaway of bridges through social media, partnerships and collabs with influencers and YouTubers. Full plans for the Bridge Game will be released where we seek to gamify the face of defi. Existing bridge holders may receive free airdrops from partner projects.
+											A gaming fund made of a portion of the presale revenue will be put into an interest yielding platform (eg. AAVE/CRV etc...). Revenue from the DAO gaming fund will be distributed to island holders to simulate economic activity (specifics to be announced).
 										</p>
-										<h3>100% Minted</h3>
-											<p>
-												After all store bridges are minted and sold, the team plans to invest the store proceeds into building up the Bridges of AVAX ecosystem. Some ideas on the drawing board include putting the proceeds into defi/yield farming and distributing bridge owners the profit as tolling revenue as well as opening up a NFT accelerator to invest in and support newer projects which may or may not result in airdrops of newer NFTs. 
+										<h3>Community Governance</h3>
+										<p>
+											After all store bridges are minted and sold, the team plans to invest the store proceeds into building up the Bridges of AVAX ecosystem. Some ideas on the drawing board include putting the proceeds into defi/yield farming and distributing bridge owners the profit as tolling revenue as well as opening up a NFT accelerator to invest in and support newer projects which may or may not result in airdrops of newer NFTs. 
 										</p>
 									</section>
 
@@ -170,9 +177,8 @@
 									<section>
 										<h2 class="major"><span>Get in touch</span></h2>
 										<ul class="contact">
-											<li><a class="icon brands fa-twitter" href="https://twitter.com/bridgesofavax"><span class="label">Twitter</span></a></li>
-											<li><a class="icon brands fa-telegram" href="https://t.me/bridgesofavax"><span class="label">Telegram</span></a></li>
-											<li><a class="icon brands fa-medium" href="https://bridgesofavax.medium.com/"><span class="label">Medium</span></a></li>
+											<li><a class="icon brands fa-twitter" href="https://twitter.com/islandsofavax"><span class="label">Twitter</span></a></li>
+											<li><a class="icon brands fa-telegram" href="https://t.me/islandsofavax"><span class="label">Telegram</span></a></li>
 										</ul>
 									</section>
 							</div>
@@ -181,8 +187,9 @@
 						<!-- Copyright -->
 							<div id="copyright">
 								<ul class="menu">
-									<li>&copy; Bridges of AVAX. All rights reserved</li>
+									<li>&copy; Islands of AVAX. All rights reserved</li>
 								</ul>
+								<ul>Disclaimer: The Islands of AVAX is a collection NFT artwork depicting unique islands and NOT an security or investment vehicle. The economic simulator is a social experiment and is subject to changes and revisions. Participants should be getting the NFTs for the art and NOT with an expectation on making a return of any form.</ul>
 							</div>
 
 					</div>
