--- a/bridges.html
+++ b/bridges.html
@@ -13,7 +13,7 @@
 				<header id="header">
 			<div class="logo container">
 						<div>
-							<h1><a href="https://launch.bridgesofavax.com" id="logo">The Bridges of AVAX</a></h1>
+							<h1><a href="#" id="logo">The Bridges of AVAX</a></h1>
 						</div>
 					</div>
 				</header>
@@ -21,7 +21,7 @@
 			<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li class="current"><a href="https://launch.bridgesofavax.com">Home</a></li>
+						<li class="current"><a href="#">Home</a></li>
 						<li><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c">Market</a></li>
 						<li>
 							<a href="#">Community</a>
@@ -29,6 +29,13 @@
 								<li><a href="https://twitter.com/bridgesofavax">Twitter</a></li>
 								<li><a href="https://t.me/bridgesofavax">Telegram</a></li>
 								<li><a href="https://bridgesofavax.medium.com">Medium</a></li>
+							</ul>
+						</li>	
+						<li>
+							<a href="#">NFT Ecosystem</a>
+							<ul>
+								<li><a href="bridges.html">Bridges of AVAX</a></li>
+								<li><a href="index.html">Islands of AVAX</a></li>
 							</ul>
 						</li>
 					</ul>
@@ -64,7 +71,7 @@
 											<p>Ready to be collected and traded</p>
 										</header>
 										<p>
-											The Bridges of AVAX is a collection of 901 NFT bridges on the Avalanche (AVAX) network. Bridges of AVAX varies with different tiers, traits and comes with a unique quote or interesting facts about them. Bridge levels are determined by economic capacity, tolling power, popularity and how widely they’re used. (Will be useful at the next phase.)
+											The Bridges of AVAX is a collection of 901 NFT bridges on the Avalanche (AVAX) network. Bridges of AVAX varies with different tiers, traits and comes with a unique quote or interesting facts about them. Bridge levels are determined by economic capacity, tolling power, popularity and how widely they’re used.
 											
 										</p>
 									</section>
@@ -120,7 +127,7 @@
 															<img src="images/Nishi-Seto.jpg" alt="" style="width:250px;height:200px;"/>
 															<h3>Future Functions</h3>
 															<p>
-																Bridges of AVAX started off with the love for bridges from which a community was established. As you may be aware, the NFT bridges are minted with traits which affect their tolling power and economic activity, a figure that will be used extensively in the next phase of development. 
+																Bridges of AVAX started off with the love for bridges from which a community was established. As you may be aware, the NFT bridges are minted with traits which affect their tolling power and economic activity (A potential feature that may be implemented in the future.).
 															</p>
 														</section>
 
@@ -156,11 +163,11 @@
 										</p> 
 										<h3>50% Minted</h3>
 										<p>
-											Tokenomics for next phase announced with more giveaway of bridges through social media, partnerships and collabs with influencers and YouTubers. Full plans for the Bridge Game will be released where we seek to gamify the face of defi. Existing bridge holders may receive free airdrops from partner projects.
+											Tokenomics for next phase announced with more giveaway of bridges through social media, partnerships and collabs with influencers and YouTubers. 
 										</p>
 										<h3>100% Minted</h3>
 											<p>
-												After all store bridges are minted and sold, the team plans to invest the store proceeds into building up the Bridges of AVAX ecosystem. Some ideas on the drawing board include putting the proceeds into defi/yield farming and distributing bridge owners the profit as tolling revenue as well as opening up a NFT accelerator to invest in and support newer projects which may or may not result in airdrops of newer NFTs. 
+												The bridges team plan to develop a network of partnerships. Our mission is to gamify the defi space and we hope our invovlement in a NFT/Blockchain gaming accelerator can foster key partnerships. Some ideas include: Free Airdrops from partner projects, creating an Ecosystem where Bridges of AVAX can finally start tolling economic activities.
 										</p>
 									</section>
 
@@ -183,8 +190,8 @@
 								<ul class="menu">
 									<li>&copy; Bridges of AVAX. All rights reserved</li>
 								</ul>
+								<ul>Disclaimer: The Bridges of  AVAX is a collection NFT artwork depicting bridges from all over the world and NOT a security or investment vehicle. Tolling power is a meme we toss around and does not mean we will be implementing it  (Maybe through partnerships). Participants should be getting the NFTs for the art and NOT with an expectation on making a return of any form.</ul>
 							</div>
-
 					</div>
 				</footer>
 
