--- a/index.html
+++ b/index.html
@@ -22,13 +22,19 @@
 				<nav id="nav">
 					<ul>
 						<li class="current"><a href="index.html">Home</a></li>
-						<li><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c">Market</a></li>
+						<li><a href="#">Launching October</a></li>
 						<li>
 							<a href="#">Community</a>
 							<ul>
 								<li><a href="https://twitter.com/islandsofavax">Twitter</a></li>
 								<li><a href="https://t.me/islandssofavax">Telegram</a></li>
-								<li><a href="https://islandsofavax.medium.com">Medium</a></li>
+							</ul>
+						</li>
+						<li>
+							<a href="#">NFT Ecosystem</a>
+							<ul>
+								<li><a href="bridges.html">Bridges of AVAX</a></li>
+								<li><a href="index.html">Islands of AVAX</a></li>
 							</ul>
 						</li>
 					</ul>
@@ -40,8 +46,10 @@
 						<h2>The Islands of AVAX</h2>
 						<p>An original NFT collection of 2000 NFT islands.</p>
 						<p>Powered by the Avalanche (AVAX) Blockchain and sold exclusive on</p>
-						<p><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c" ><img src="images/nftrade-logo.png" alt="" style="width:200px;height:30px;"/></a></p>						
-						<a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c" class="button scrolly" >See Collection</a>
+						<p><img src="images/nftrade-logo.png" alt="" style="width:200px;height:30px;"/></p>						
+						<ul>
+							<li class="button scrolly">Launching October</li>
+						</ul>
 					</div>
 				</section>
 
@@ -54,10 +62,10 @@
 								<!-- Highlight -->
 									<section class="box highlight">
 										<ul class="special">
-											<li><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c/17" ><img src="images/small-desert-island.png" alt="" style="width:200px;height:200px;"/></a></li>
-											<li><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c/115" ><img src="images/small-mountain-island.png" alt="" style="width:200px;height:200px;"/></a></li>
-											<li><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c/137" ><img src="images/medium-lumber-island.png" alt="" style="width:200px;height:200px;"/></a></li>
-											<li><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c" ><img src="images/Islands-of-Avax-Demo.gif" alt="" style="width:200px;height:200px;"/></a></li>
+											<li><img src="images/small-desert-island.png" alt="" style="width:200px;height:200px;"/></li>
+											<li><img src="images/small-mountain-island.png" alt="" style="width:200px;height:200px;"/></li>
+											<li><img src="images/medium-lumber-island.png" alt="" style="width:200px;height:200px;"/></li>
+											<li><img src="images/Islands-of-Avax-Demo.gif" alt="" style="width:200px;height:200px;"/></li>
 										</ul>
 										<ul>
 											<li class="button alt scrolly">Avalanche C-Chain</li>
@@ -110,7 +118,7 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<img src="images/bridgeonomics.png" alt="" style="width:250px;height:200px;"/>
+															<img src="images/Islands-of-Avax-demo-dev.gif" alt="" style="width:200px;height:200px;"/>
 															<h3>Develop and power up</h3>
 															<p>
 																While islands initially are undeveloped, players may opt to erect resource extraction facilities on their island based on the island type. (eg. Forest island = Lumber Mill, Mountain island = Mine)
@@ -122,19 +130,13 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<img src="images/Nishi-Seto.jpg" alt="" style="width:250px;height:200px;"/>
+															<img src="images/capitol-island.png" alt="" style="width:200px;height:200px;"/>
 															<h3>Project DAO (Proposed)</h3>
 															<p>
 																A portion of the sale proceeds will go towards a perpetual fund. Monthly revenue from the perpetual will go towards the simluation of the economic activity (Eg. Token Airdrops & other NFT airdrops) 
 															</p>
 														</section>
 
-												</div>
-												<div class="col-12">
-													<ul class="actions">
-														<li><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c" class="button large">Visit Marketplace</a></li>
-														<li><a href="https://bridgesofavax.medium.com/" class="button alt large">Learn more about Bridges of AVAX</a></li>
-													</ul>
 												</div>
 											</div>
 										</div>
@@ -188,8 +190,8 @@
 							<div id="copyright">
 								<ul class="menu">
 									<li>&copy; Islands of AVAX. All rights reserved</li>
+									<li>Disclaimer: The Islands of AVAX is a collection NFT artwork depicting unique islands and NOT a security or investment vehicle. The economic simulator is a social experiment and is subject to changes and revisions. Participants should be getting the NFTs for the art and NOT with an expectation on making a return of any form.</li>
 								</ul>
-								<ul>Disclaimer: The Islands of AVAX is a collection NFT artwork depicting unique islands and NOT an security or investment vehicle. The economic simulator is a social experiment and is subject to changes and revisions. Participants should be getting the NFTs for the art and NOT with an expectation on making a return of any form.</ul>
 							</div>
 
 					</div>
