--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 	<head>
 		<title>Islands of AVAX | A Collection of NFT islands with an Economic Simulation only on the AVAX Avalanche Network</title>
 		<meta charset="utf-8" />
+		<meta property="og:title" content="Islands of AVAX | Collection of NFT Islands + Economic Simulation Game on AVAX">
+		<meta property="og:description" content="A Collection of NFT islands with an Economic Simulation Game">
+		<meta property="og:image" content="https://islandsofavax.com/images/medium-lumber-island.png">
+		<meta property="og:url" content="https://islandsofavax.com/index.htm">
+		<meta name="twitter:card" content="summary_large_image">
+		<meta property="og:site_name" content="Islands of AVAX">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
