--- a/index.html
+++ b/index.html
@@ -173,11 +173,11 @@
 										<p>
 											A gaming fund made of a portion of the presale revenue will be put into an interest yielding platform (eg. AAVE/CRV etc...). Revenue from the DAO gaming fund will be distributed to island holders to simulate economic activity (specifics to be announced).
 										</p>
-										<h3>Community Governance</h3>
+										<h3>District and Federal Regional Governance</h3>
 										<p>
-											After all store bridges are minted and sold, the team plans to invest the store proceeds into building up the Bridges of AVAX ecosystem. Some ideas on the drawing board include putting the proceeds into defi/yield farming and distributing bridge owners the profit as tolling revenue as well as opening up a NFT accelerator to invest in and support newer projects which may or may not result in airdrops of newer NFTs. 
+											All islands are classified to specific district and federal regions, players may opt to be distict or regional governors and receive a % of ecomoic activity of all players within their region. They also can set policies from taxes to developmental incentives as well as construct district infrastructures to improve overall district economic output.  
 										</p>
-									</section>
+								</section>
 
 							</div>
 							<div class="col-12">
